sro-packages/hybrid-usage-add-on/main/default/objects/blng__UsageSummary__c/fields/ActivePeriod__c.field-meta.xml
<CustomField>
    <fullName>ActivePeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Period</label>
    <type>Checkbox</type>
</CustomField>