sro-packages/hybrid-usage-add-on/main/default/objects/blng__UsageSummary__c/fields/CreditTracker__c.field-meta.xml
<CustomField>
    <fullName>CreditTracker__c</fullName>
    <formula>ISPICKVAL(  blng__OrderProduct__r.SBQQ__RequiredBy__r.UsageType__c, &quot;Credit&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Tracker</label>
    <type>Checkbox</type>
</CustomField>