sro-packages/hybrid-usage-add-on/main/default/objects/blng__UsageSummary__c/fields/RefreshPeriod__c.field-meta.xml
<CustomField>
    <fullName>RefreshPeriod__c</fullName>
    <formula>AND(
  IF( ISPICKVAL( blng__OrderProduct__r.CreditCarryoverType__c , &quot;Rolling&quot;), true,
  IF( ISPICKVAL( blng__OrderProduct__r.CreditCarryoverType__c , &quot;Pool&quot;), MOD(Index__c-1, 
  blng__OrderProduct__r.UsageTerm__c) == 0,
  false
  )
  ),
   CreditTracker__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh Period</label>
    <type>Checkbox</type>
</CustomField>