sro-packages/hybrid-usage-add-on/main/default/objects/blng__UsageSummary__c/fields/UsageAccumulationRunProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>UsageAccumulationRunProcessingStatus__c</fullName>
    <label>Usage Accumulation Run Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UsageAccumulationRunProcessingStatus</valueSetName>
    </valueSet>
</CustomField>