sro-packages/hybrid-usage-add-on/main/default/objects/blng__UsageSummary__c/fields/UsageCreditRunProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>UsageCreditRunProcessingStatus__c</fullName>
    <label>Usage Credit Run Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UsageCreditRunProcessingStatus</valueSetName>
    </valueSet>
</CustomField>